Fixed sidebar overlap

--- a/src/theme/common.scss
+++ b/src/theme/common.scss
@@ -246,6 +246,10 @@ html, body {
   }
 }
 
+.comment-list {
+  display: grid;
+}
+
 .comment {
   .comment-container {
     padding: 2px;
